--- a/webservice/templates/show_campaigns_stats.html
+++ b/webservice/templates/show_campaigns_stats.html
@@ -10,7 +10,7 @@ Selected Campaign Stages{%include 'help_button.html'%}
 
 {%block content%}
 
-  {%set column_heads = ['All','Idle','Running','Held','Total Completed','Completed', 'Located', 'Removed', 'efficiency', 'pending'] %}
+  {%set column_heads = ['All','Idle','Running','Held','Total Completed','Completed', 'Located', 'Removed', 'Failed', 'efficiency', 'pending'] %}
 
   <div id="double-scroll" class="ui scrollable">
 
@@ -25,7 +25,7 @@ Selected Campaign Stages{%include 'help_button.html'%}
       </th>
       <th>Total</th>
       <th colspan=3 align="center">Active Jobs </th>
-      <th colspan=3 align="center">Completed </th>
+      <th colspan=4 align="center">Completed </th>
       <th colspan=1 align="center"></th>
       <th colspan=2 align="center">Stats</th>
      </tr>
@@ -40,19 +40,21 @@ Selected Campaign Stages{%include 'help_button.html'%}
         <th>Not&nbsp;Located<a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job"><i style="float: none" class="grey help circle link icon"></i></a> </th>
         <th>Located<a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job"><i style="float: none" class="grey help circle link icon"></i></a> </th>
         <th>Removed<a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job"><i style="float: none" class="grey help circle link icon"></i></a> </th>
+        <th>Failed<a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job"><i style="float: none" class="grey help circle link icon"></i></a> </th>
         <th>%Efficiency<a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job"><i style="float: none" class="grey help circle link icon"></i></a> </th>
         <th>Pending<a target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/Glossary#Job"><i style="float: none" class="grey help circle link icon"></i></a> </th>
      </tr>
 
      {# for c in campaigns if not c.experiment_obj.restricted or current_experimenter.is_authorized(c.experiment) #}
      {# for c in campaigns if not c.experiment_obj.restricted or c.experiment in current_experimenter.extra.selected #}
-     {% for c in campaigns if current_experimenter.extra and c.experiment in current_experimenter.extra.selected %}
+     {# for c in campaigns if current_experimenter.extra and c.experiment in current_experimenter.extra.selected #}
+     {% for c in campaigns %}
      {% set outer_loop = loop %}
             <tr>
             <!-- <td>{{c.experiment}}</td> -->
             <!-- c.experiment_obj.restricted: {{c.experiment_obj.restricted}} -->
             <!-- current_experimenter.is_authorized(c.experiment): {{current_experimenter}} -->
-            <!-- c.experiment in current_experimenter.extra.selected {{c.experiment in current_experimenter.extra.selected}}-->
+            {#<!-- c.experiment in current_experimenter.extra.selected {{c.experiment in current_experimenter.extra.selected}}-->#}
             <td> <a href="{{pomspath}}/campaign_info?campaign_id={{c.campaign_id}}">{{c.name}}</a></td>
             {% for k in column_heads  %}
 
