--- a/webservice/templates/search_tags.html
+++ b/webservice/templates/search_tags.html
@@ -9,7 +9,7 @@ POMS Tag Query Results
          Tag Query Results {%include 'help_button.html'%}
 
           <div class="sub header">
-              view all Campaign Stagess belonging to this Tag/Campaign
+              view all Campaign Stages belonging to this Tag/Campaign
           </div>
 </h1>
 {%endblock%}
