made a link to the page, as Chrome wil not embed it

--- a/webservice/templates/triage_job.html
+++ b/webservice/templates/triage_job.html
@@ -172,24 +172,17 @@ Held because: {{job_info.Job.reason_held}}
     </tbody>
   </table>
 
+<h4 class="ui horizontal divider header">
+      <i class="history icon"></i>
+      Downtimes
+</h4>
 
-
-
-
+<a href="https://fermi.service-now.com/home.do?sysparm_view=scd_outage_calendar&sysparm_auto_request=true" target="_popup" >Downtime Calender</a>
 
 <h4 class="ui horizontal divider header">
       <i class="history icon"></i>
       History
 </h4>
-
-
-
-
-
-
-
-
-
 
 <table class="ui very basic collapsing celled table">
         <tbody>
