--- a/webservice/templates/triage_job.html
+++ b/webservice/templates/triage_job.html
@@ -177,7 +177,7 @@ Held because: {{job_info.Job.reason_held}}
       Downtimes
 </h4>
 
-<a href="https://fermi.service-now.com/home.do?sysparm_view=scd_outage_calendar&sysparm_auto_request=true" target="_popup" >Downtime Calender</a>
+<a href="https://fermi.service-now.com/home.do?sysparm_view=scd_outage_calendar&sysparm_auto_request=true" target="_popup" >Downtime Calendar</a>
 
 <h4 class="ui horizontal divider header">
       <i class="history icon"></i>
