--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -34,7 +34,7 @@
         <a class="item" href="{{exp_obj.snow_url if exp_obj else '#'}}" target="_blank">POMS ServiceNow Page</a>
     </div>
     <div class="menu">
-        <a href="https://fermi.service-now.com/home.do?sysparm_view=scd_outage_calendar&sysparm_auto_request=true" target="_popup" >Downtime Calendar</a>
+        <a class="item" href="https://fermi.service-now.com/home.do?sysparm_view=scd_outage_calendar&sysparm_auto_request=true" target="_popup" >Downtime Calendar</a>
     </div>
   </div>
 
