moved into a templated page...

--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -57,7 +57,7 @@
   </head>
 
 
-<body id="example" class="started" ontouchstart="">
+<body id="example" class="started" ontouchstart="" {%block bodytags%} {%endblock%} >
 
   <!--modal for messages-->
   <div class="ui modal" id="display_message_modal">
