--- a/webservice/templates/show_tags.html
+++ b/webservice/templates/show_tags.html
@@ -34,6 +34,9 @@ Campaign Tags:
     <button>
    <a href="{{pomspath}}/campaign_time_bars?tag={{t.tag_name}}&tdays=7&tmax={{last_activity}}"><i class="tasks icon"></i>Submissions</a>
     </button>
+   <button>
+   <a href="{{pomspath}}/gui_wf_edit?campaign={{t.tag_name}}"><i class="pencil icon"></i>Edit Workflow</a>
+    </button>
 {% endfor %}
 </ul>
 
