Now works in IE 11 (shudder)

--- a/webservice/templates/campaign_info.html
+++ b/webservice/templates/campaign_info.html
@@ -382,9 +382,9 @@ $( document ).ready(function() {
     <b>cs_last_split</b>: {{Campaign.cs_last_split}} <a href="{{pomspath}}/reset_campaign_split?campaign_id={{Campaign.campaign_id}}"><button class="mini ui button"><i class="fast backward icon"></i>Reset</button></a><br>
     <b>Active</b>: {{Campaign.active}} <br>
     <b>Created</b>: {{Campaign.created}}<br>
-    <b>Creator</b>: {{Campaign_info.Experimenter.username}}</br>
+    <b>Creator</b>: {{Campaign_info.Experimenter.username}}<br>
     <b>Updated</b>: {{Campaign.updated}}<br>
-    <b>Updater</b>: {{Campaign_info.Experimenter.username}}</br>
+    <b>Updater</b>: {{Campaign_info.Experimenter.username}}<br>
     </div>
 
 
