up down plus minus buttons are almost right now..

--- a/webservice/static/css/gui_editor_3.css
+++ b/webservice/static/css/gui_editor_3.css
@@ -67,7 +67,8 @@ div.box.selected {
    position: relative;
 }
 
-.popup_form { 
+
+.popup_form, .popup_form_json { 
     display: block;
     background-color: white;
     position: absolute;
